examples/test/testpolicy12386.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12386
  namespace: namespace288
spec:
  podSelector:
    matchLabels:
      key22: value11
      key40: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value39
          key33: value32
          key29: value6
      podSelector:
        matchLabels:
          key14: value12
          key9: value20
          key27: value20
